--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^8.11.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "recharts": "^2.15.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
